<resources>
    <string name="app_name">SDK Demo</string>

    <string name="url_paypoint">http://192.168.3.140:5000</string>
    <string name="url_merchant">http://192.168.3.140:5000/merchant</string>
    <string name="installation_id">6100001</string>

    <string name="activity_splash_title">Payments SDK</string>
    <string name="activity_payment_title">Payment</string>
    <string name="activity_receipt_title">Receipt</string>

    <string name="splash_paypoint">PayPoint</string>
    <string name="splash_button_text">Start</string>

    <string name="payment_card_number">Card Number</string>
    <string name="payment_expiry">Expiry</string>
    <string name="payment_cvc">CVV</string>
    <string name="payment_button_text">Pay Now</string>

    <string name="receipt_card_number">Card Number:</string>
    <string name="receipt_card_number_formatted">**** **** **** %s</string>
    <string name="receipt_merchant_ref">Merchant Ref:</string>
    <string name="receipt_transaction_id">Transaction Id:</string>
    <string name="receipt_amount">Amount:</string>
    <string name="receipt_amount_formatted">£%.2f</string>

    <string name="error_expired">Expiry date is in the past</string>
    <string name="error_expiry_invalid">Invalid expiry date. Must be YYMM</string>
    <string name="error_invalid_pan">Invalid card number. Must be numbers only</string>
    <string name="error_invalid_luhn">Invalid card number</string>
    <string name="error_invalid_cvv">Invalid CVV. Must be numbers only</string>
    <string name="error_no_network">Phone does no have a network connection; Please check your internet or data connection and try again</string>

</resources>
