<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity"
    android:background="@android:color/white">

   <include android:layout_width="match_parent"
       android:layout_height="wrap_content" layout="@layout/toolbar" android:layout_alignParentTop="true"/>

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView android:id="@+id/labelCardNumber"
            android:text="@string/payment_card_number" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Normal"/>

        <com.paypoint.sdk.demo.widget.ShakeableEditText android:id="@+id/editCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="01234 56789"
            android:inputType="number"
            android:maxLength="23"
            style="@style/Text.Edit"
            android:layout_marginTop="@dimen/activity_vertical_margin_quarter"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView android:id="@+id/labelCardExpiry"
                    android:text="@string/payment_expiry" android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Text.Normal"/>

                <com.paypoint.sdk.demo.widget.ShakeableEditText android:id="@+id/editCardExpiry"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:digits="0123456789"
                    style="@style/Text.Edit"
                    android:maxLength="4"
                    android:textColorHint="@color/paypoint_grey_50"
                    android:hint="MMYY"
                    android:layout_marginTop="@dimen/activity_vertical_margin_quarter"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin_half">

                <TextView android:id="@+id/labelCardCVV"
                    android:text="@string/payment_cvc" android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Text.Normal"/>

                <com.paypoint.sdk.demo.widget.ShakeableEditText android:id="@+id/editCardCVV"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    style="@style/Text.Edit"
                    android:maxLength="4"
                    android:layout_marginTop="@dimen/activity_vertical_margin_quarter"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ImageView android:id="@+id/imageLogo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/_paypoint_logo"
        android:adjustViewBounds="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:visibility="gone"/>

    <TextView android:id="@+id/labelCurrency" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Text.Large"
        android:text="£"
        android:layout_toLeftOf="@+id/editAmount"
        android:layout_alignBottom="@+id/editAmount"
        android:layout_marginRight="5dp"/>

    <com.paypoint.sdk.demo.widget.AmountEditText android:id="@+id/editAmount"
        android:text="100.00" android:layout_width="90dp"
        android:layout_height="wrap_content"
        style="@style/Text.Edit"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:gravity="right|center_vertical"
        android:layout_above="@+id/buttonPay"
        android:layout_alignRight="@+id/buttonPay"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin_half"/>

    <Button android:id="@+id/buttonPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/button_bg"
        android:textColor="@drawable/button_text"
        android:text="@string/payment_button_text"
        style="@style/Text.Normal"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"/>

</RelativeLayout>
